Sovereignty-AI-Studio-main/AI_Error_Handling
# Comprehensive Programming Debugging Guide

This guide addresses common programming errors, systematic debugging methodologies, and configuration recommendations specific to each programming language. The content is organized by language, commencing with recommended practices for environment setup, followed by illustrative examples of prevalent errors and their resolutions.

## Legend
- ❌ Red = Buggy code
- ✅ Green = Fixed code

## Setup Tips
1. Verify that Python 3 is installed: `python --version`
2. Utilize a virtual environment to separate project dependencies.

## Python Errors

### 1. Syntax Error (Python)

**Scenario:** A missing parenthesis in a print statement.

**Error Message:**
```
File "main.py", line 2
    print("Hello World"
                      ^
SyntaxError: unexpected EOF while parsing
```

**Flow Diagram:**
Start → Run program → SyntaxError? → Check line 2 → Missing closing parenthesis? → Yes → Add parenthesis → Run again → ✅ Fixed

| ❌ Buggy Code | ✅ Fixed Code |
| :-: | :-: |
| ```python
print("Hello World"  # Missing closing parenthesis
``` | ```python
print("Hello World")  # Added parenthesis
``` |

### 2. Logical Error (Python Loop)

**Scenario:** An off-by-one error when summing 1 to 5.

**Output:** 10 (Expected 15)

**Flow Diagram:**
Start → Run program → Output wrong? → Yes → Check loop range → Python range(1,5) stops at 4 → Add 1 to stop value → ✅ Fixed

| ❌ Buggy Code | ✅ Fixed Code |
| :-: | :-: |
| ```python
for i in range(1,5):  # 5 not included
``` | ```python
for i in range(1,6):  # Includes 5
``` |

## Java Errors

### 3. Runtime Error (Java NullPointerException)

**Scenario:** Attempting to call a method on a null variable.

**Error Message:**
```
Exception in thread "main" java.lang.NullPointerException
    at Example.main(Example.java:4)
```

**Flow Diagram:**
Start → Compile → Run program → Crash at line 4 → Check variable → Is it null? → Yes → Initialize variable → Run again → ✅ Fixed

| ❌ Buggy Code | ✅ Fixed Code |
| :-: | :-: |
| ```java
String name = null;  // Attempting to call length() on a null reference
System.out.println(name.length());
``` | ```java
String name = "Alice";  // Initialize before use
System.out.println(name.length());
``` |

## C++ Errors

### 4. Array Out of Range

**Scenario:** Accessing an invalid index results in a segmentation fault.

**Error Message:**
```
Segmentation fault (core dumped)
```

**Flow Diagram:**
Start → Compile → Run → Crash? → Check array index → Is index < size? → No → Correct index → ✅ Resolved

| ❌ Buggy Code | ✅ Fixed Code |
| :-: | :-: |
| ```cpp
// Assuming array size is 5
array[5] = value;  // Invalid index
``` | ```cpp
// Assuming array size is 5
array[4] = value;  // Valid index
``` |

This guide should be expanded with more languages and examples as needed.